# LinkLlama

./: LICENSE  README.md  environment.yml  pyproject.toml
assets/docs/: inference_guide.md  retraining_guide.md
data/: README.md  inference_config.yaml  zinc_minimal.csv
linkllama/: __init__.py
linkllama/benchmark/: README.md  __init__.py  geometry_benchmark_base.py  source_delinker.py  source_difflinker.py  source_linkllama.py  types.py  unidock_benchmark.py  unidock_benchmark_utils.py  unified_benchmark.py
linkllama/llm/: README.md  __init__.py  calculate_properties.py  constants.py  create_balanced_subset.py  fragmentation_sdf.py  fragmentize.py  inference.py  sft_corpus.py
linkllama/training/: README.md  cf_lora_cap50.yml
linkllama/utils/: README.md  __init__.py  conformer_generation.py  fragmentation.py  geometry.py  properties.py  sdf_reader.py
linkllama/utils/ring_systems/: chembl36.csv  chembl36_no_stereo.csv
