[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkllama"
version = "0.1.0"
description = "Linker design via supervised fine-tuning of language models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{name = "LinkLlama contributors"}]
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "torch>=2.1,<3",
    "transformers>=4.40",
    "tqdm>=4.65",
    "pyyaml>=6",
    "useful-rdkit-utils>=0.4",
]

[project.optional-dependencies]
dev = ["pyflakes>=3.0"]
benchmark = ["spyrmsd>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["linkllama*"]
